changed date argument passed into upload to main db to email recieved date instead of declaration date

--- a/EA Waste Tonnage Returns/Logic Workflows/Process Case.xaml
+++ b/EA Waste Tonnage Returns/Logic Workflows/Process Case.xaml
@@ -379,21 +379,11 @@
                                             </sap:WorkflowViewStateService.ViewState>
                                             <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Check Type Of Excel" sap:VirtualizedContainerService.HintSize="361,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_7" UnSafe="False" WorkflowFileName="Data Workflows\Excel\Check Type Of Excel.xaml">
                                               <ui:InvokeWorkflowFile.Arguments>
-                                                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">
-                                                  <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="IN_dictConfig" />
-                                                </InArgument>
-                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strWorkingDirectory">
-                                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strWorkingDirectory" />
-                                                </InArgument>
-                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strAttachmentName">
-                                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strAttachmentName" />
-                                                </InArgument>
-                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strPermitNumber">
-                                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="OUT_strPermitNumber" />
-                                                </InArgument>
-                                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strExcelFilePath">
-                                                  <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="strExcelFilePath" />
-                                                </OutArgument>
+                                                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">[IN_dictConfig]</InArgument>
+                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strWorkingDirectory">[strWorkingDirectory]</InArgument>
+                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strAttachmentName">[strAttachmentName]</InArgument>
+                                                <InArgument x:TypeArguments="x:String" x:Key="IN_strPermitNumber">[OUT_strPermitNumber]</InArgument>
+                                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strExcelFilePath">[strExcelFilePath]</OutArgument>
                                               </ui:InvokeWorkflowFile.Arguments>
                                               <sap:WorkflowViewStateService.ViewState>
                                                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -472,18 +462,10 @@
                                                 <TryCatch.Try>
                                                   <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Attach Excel File workflow" sap:VirtualizedContainerService.HintSize="355,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="Logic Workflows\ORATS\Attach Excel File.xaml">
                                                     <ui:InvokeWorkflowFile.Arguments>
-                                                      <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">
-                                                        <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="IN_dictConfig" />
-                                                      </InArgument>
-                                                      <InArgument x:TypeArguments="ui:Window" x:Key="IN_windowORATS">
-                                                        <mva:VisualBasicValue x:TypeArguments="ui:Window" ExpressionText="IN_windowORATS" />
-                                                      </InArgument>
-                                                      <OutArgument x:TypeArguments="ui:Window" x:Key="OUT_windowImportSpreadsheet">
-                                                        <mva:VisualBasicReference x:TypeArguments="ui:Window" ExpressionText="OUT_windowImportSpreadsheet" />
-                                                      </OutArgument>
-                                                      <InArgument x:TypeArguments="x:String" x:Key="IN_strExcelFilePath">
-                                                        <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strExcelFilePath" />
-                                                      </InArgument>
+                                                      <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">[IN_dictConfig]</InArgument>
+                                                      <InArgument x:TypeArguments="ui:Window" x:Key="IN_windowORATS">[IN_windowORATS]</InArgument>
+                                                      <OutArgument x:TypeArguments="ui:Window" x:Key="OUT_windowImportSpreadsheet">[OUT_windowImportSpreadsheet]</OutArgument>
+                                                      <InArgument x:TypeArguments="x:String" x:Key="IN_strExcelFilePath">[strExcelFilePath]</InArgument>
                                                     </ui:InvokeWorkflowFile.Arguments>
                                                   </ui:InvokeWorkflowFile>
                                                 </TryCatch.Try>
@@ -540,12 +522,24 @@
                                                         <TryCatch.Try>
                                                           <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Upload to Main DB workflow" sap:VirtualizedContainerService.HintSize="370,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="Logic Workflows\ORATS\Upload to Main DB.xaml">
                                                             <ui:InvokeWorkflowFile.Arguments>
-                                                              <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">[IN_dictConfig]</InArgument>
-                                                              <InArgument x:TypeArguments="ui:Window" x:Key="IN_windowImportSpreadsheet">[OUT_windowImportSpreadsheet]</InArgument>
-                                                              <InArgument x:TypeArguments="x:String" x:Key="IN_strDateReceived">[strDeclarationDate]</InArgument>
-                                                              <OutArgument x:TypeArguments="x:String" x:Key="OUT_strFlow">[OUT_strFlow]</OutArgument>
-                                                              <OutArgument x:TypeArguments="x:String" x:Key="OUT_strReasonForStoppingRobot">[OUT_strReasonForStoppingRobot]</OutArgument>
-                                                              <InArgument x:TypeArguments="x:String" x:Key="IN_strExcelFilePath">[strWorkingDirectory + strAttachmentName]</InArgument>
+                                                              <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">
+                                                                <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="IN_dictConfig" />
+                                                              </InArgument>
+                                                              <InArgument x:TypeArguments="ui:Window" x:Key="IN_windowImportSpreadsheet">
+                                                                <mva:VisualBasicValue x:TypeArguments="ui:Window" ExpressionText="OUT_windowImportSpreadsheet" />
+                                                              </InArgument>
+                                                              <InArgument x:TypeArguments="x:String" x:Key="IN_strDateReceived">
+                                                                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strEmailRecievedDate" />
+                                                              </InArgument>
+                                                              <OutArgument x:TypeArguments="x:String" x:Key="OUT_strFlow">
+                                                                <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="OUT_strFlow" />
+                                                              </OutArgument>
+                                                              <OutArgument x:TypeArguments="x:String" x:Key="OUT_strReasonForStoppingRobot">
+                                                                <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="OUT_strReasonForStoppingRobot" />
+                                                              </OutArgument>
+                                                              <InArgument x:TypeArguments="x:String" x:Key="IN_strExcelFilePath">
+                                                                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strWorkingDirectory + strAttachmentName" />
+                                                              </InArgument>
                                                             </ui:InvokeWorkflowFile.Arguments>
                                                           </ui:InvokeWorkflowFile>
                                                         </TryCatch.Try>
