--- a/EA Waste Tonnage Returns/Data Workflows/Excel/Read Excel Waste Return.xaml
+++ b/EA Waste Tonnage Returns/Data Workflows/Excel/Read Excel Waste Return.xaml
@@ -11,6 +11,7 @@
     <x:Property Name="IN_strRevisedPermitNumber" Type="InArgument(x:String)" />
     <x:Property Name="OUT_strFullPermitNumberWithType" Type="OutArgument(x:String)" />
     <x:Property Name="OUT_strReturnPeriodYear" Type="OutArgument(ui:GenericValue)" />
+    <x:Property Name="IN_strEmailRecievedDate" Type="InArgument(x:String)" />
   </x:Members>
   <this:Read_Excel_Waste_Return.IN_dictConfig>
     <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" />
@@ -18,7 +19,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>934,701</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>653,701</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Read_Excel_Waste_Return_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="24">
@@ -151,7 +152,7 @@
               <av:PointCollection x:Key="ConnectorLocation">300,395.5 300,445.5</av:PointCollection>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <Flowchart DisplayName="Main Logic" sap:VirtualizedContainerService.HintSize="668,1626" sap2010:WorkflowViewState.IdRef="Flowchart_2">
+          <Flowchart DisplayName="Main Logic" sap:VirtualizedContainerService.HintSize="640,1617" sap2010:WorkflowViewState.IdRef="Flowchart_2">
             <Flowchart.Variables>
               <Variable x:TypeArguments="ui:GenericValue" Name="genDeclarationDate" />
             </Flowchart.Variables>
@@ -161,8 +162,8 @@
                 <av:Point x:Key="ShapeLocation">200,12.5</av:Point>
                 <av:Size x:Key="ShapeSize">60,75</av:Size>
                 <av:PointCollection x:Key="ConnectorLocation">230,87.5 230,137.5</av:PointCollection>
-                <x:Double x:Key="Height">1590</x:Double>
-                <x:Double x:Key="Width">634</x:Double>
+                <x:Double x:Key="Height">1581</x:Double>
+                <x:Double x:Key="Width">606</x:Double>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
             <Flowchart.StartNode>
@@ -192,7 +193,7 @@
                 <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="262,61" sap2010:WorkflowViewState.IdRef="WriteLine_9" Text="[&quot;Declaration date is &quot; + OUT_strDeclarationDate]" />
               </Sequence>
             </FlowStep>
-            <FlowStep x:Name="__ReferenceID11">
+            <FlowStep x:Name="__ReferenceID10">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <av:Point x:Key="ShapeLocation">130,239.5</av:Point>
@@ -284,7 +285,7 @@
                         </WriteLine>
                       </Sequence>
                       <FlowStep.Next>
-                        <FlowDecision x:Name="__ReferenceID14" Condition="[OUT_strReturnPeriodYear IsNot Nothing]" DisplayName="Got Return Year?" sap:VirtualizedContainerService.HintSize="94,87" sap2010:WorkflowViewState.IdRef="FlowDecision_5">
+                        <FlowDecision x:Name="__ReferenceID13" Condition="[OUT_strReturnPeriodYear IsNot Nothing]" DisplayName="Got Return Year?" sap:VirtualizedContainerService.HintSize="94,87" sap2010:WorkflowViewState.IdRef="FlowDecision_5">
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -295,7 +296,7 @@
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
                           <FlowDecision.True>
-                            <FlowStep x:Name="__ReferenceID12">
+                            <FlowStep x:Name="__ReferenceID11">
                               <sap:WorkflowViewStateService.ViewState>
                                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                   <av:Point x:Key="ShapeLocation">140,737</av:Point>
@@ -382,7 +383,7 @@
                                               <av:Point x:Key="ShapeLocation">205,1096.5</av:Point>
                                               <av:Size x:Key="ShapeSize">70,87</av:Size>
                                               <av:PointCollection x:Key="TrueConnector">205,1140 185,1140 185,1206 245,1206 245,1236</av:PointCollection>
-                                              <av:PointCollection x:Key="FalseConnector">275,1140 325,1140</av:PointCollection>
+                                              <av:PointCollection x:Key="FalseConnector">275,1140 365,1140</av:PointCollection>
                                             </scg:Dictionary>
                                           </sap:WorkflowViewStateService.ViewState>
                                           <FlowDecision.True>
@@ -423,19 +424,39 @@
                                                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                       <av:Point x:Key="ShapeLocation">210,1354</av:Point>
                                                       <av:Size x:Key="ShapeSize">70,87</av:Size>
-                                                      <av:PointCollection x:Key="FalseConnector">280,1397.5 330,1397.5</av:PointCollection>
+                                                      <av:PointCollection x:Key="FalseConnector">280,1397.5 360,1397.5</av:PointCollection>
                                                       <av:PointCollection x:Key="TrueConnector">210,1397.5 190,1397.5 190,1463.5 250,1463.5 250,1493.5</av:PointCollection>
                                                     </scg:Dictionary>
                                                   </sap:WorkflowViewStateService.ViewState>
                                                   <FlowDecision.False>
-                                                    <FlowStep x:Name="__ReferenceID10">
+                                                    <FlowStep x:Name="__ReferenceID14">
                                                       <sap:WorkflowViewStateService.ViewState>
                                                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                                          <av:Point x:Key="ShapeLocation">330,1386.5</av:Point>
-                                                          <av:Size x:Key="ShapeSize">200,22</av:Size>
+                                                          <av:Point x:Key="ShapeLocation">360,1364.5</av:Point>
+                                                          <av:Size x:Key="ShapeSize">200,66</av:Size>
                                                         </scg:Dictionary>
                                                       </sap:WorkflowViewStateService.ViewState>
-                                                      <Throw DisplayName="Throw Business Exception" Exception="[New BusinessRuleException(&quot;Declaration date cell is empty.&quot;)]" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="Throw_8" />
+                                                      <Sequence DisplayName="If empty assign Declaration Date to Email Date" sap:VirtualizedContainerService.HintSize="200,66" sap2010:WorkflowViewState.IdRef="Sequence_18">
+                                                        <sap:WorkflowViewStateService.ViewState>
+                                                          <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                                                            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                                                          </scg:Dictionary>
+                                                        </sap:WorkflowViewStateService.ViewState>
+                                                        <Assign DisplayName="Assign Declaration Date to Email Recieved Date" sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_14">
+                                                          <Assign.To>
+                                                            <OutArgument x:TypeArguments="ui:GenericValue">[OUT_strDeclarationDate]</OutArgument>
+                                                          </Assign.To>
+                                                          <Assign.Value>
+                                                            <InArgument x:TypeArguments="ui:GenericValue">[IN_strEmailRecievedDate]</InArgument>
+                                                          </Assign.Value>
+                                                          <sap:WorkflowViewStateService.ViewState>
+                                                            <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                                                              <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                                                            </scg:Dictionary>
+                                                          </sap:WorkflowViewStateService.ViewState>
+                                                        </Assign>
+                                                        <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="262,61" sap2010:WorkflowViewState.IdRef="WriteLine_15" Text="[&quot;Declaration date is &quot; + OUT_strDeclarationDate]" />
+                                                      </Sequence>
                                                     </FlowStep>
                                                   </FlowDecision.False>
                                                 </FlowDecision>
@@ -446,23 +467,37 @@
                                             <FlowStep x:Name="__ReferenceID15">
                                               <sap:WorkflowViewStateService.ViewState>
                                                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                                  <av:Point x:Key="ShapeLocation">325,1110</av:Point>
-                                                  <av:Size x:Key="ShapeSize">262,60</av:Size>
+                                                  <av:Point x:Key="ShapeLocation">365,1107</av:Point>
+                                                  <av:Size x:Key="ShapeSize">200,66</av:Size>
                                                 </scg:Dictionary>
                                               </sap:WorkflowViewStateService.ViewState>
-                                              <Assign sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_12">
-                                                <Assign.To>
-                                                  <OutArgument x:TypeArguments="x:String">[OUT_strDeclarationName]</OutArgument>
-                                                </Assign.To>
-                                                <Assign.Value>
-                                                  <InArgument x:TypeArguments="x:String">NA</InArgument>
-                                                </Assign.Value>
+                                              <Sequence DisplayName="If empty assign Declaration Name to NA" sap:VirtualizedContainerService.HintSize="200,66" sap2010:WorkflowViewState.IdRef="Sequence_19">
                                                 <sap:WorkflowViewStateService.ViewState>
                                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                   </scg:Dictionary>
                                                 </sap:WorkflowViewStateService.ViewState>
-                                              </Assign>
+                                                <Assign DisplayName="Assign Declaration Name to NA" sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_15">
+                                                  <Assign.To>
+                                                    <OutArgument x:TypeArguments="x:String">[OUT_strDeclarationName]</OutArgument>
+                                                  </Assign.To>
+                                                  <Assign.Value>
+                                                    <InArgument x:TypeArguments="x:String">NA</InArgument>
+                                                  </Assign.Value>
+                                                  <sap:WorkflowViewStateService.ViewState>
+                                                    <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                                                      <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                                                    </scg:Dictionary>
+                                                  </sap:WorkflowViewStateService.ViewState>
+                                                </Assign>
+                                                <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="262,61" sap2010:WorkflowViewState.IdRef="WriteLine_16" Text="[&quot;Declaration name is &quot; + OUT_strDeclarationName]">
+                                                  <sap:WorkflowViewStateService.ViewState>
+                                                    <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                                                      <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                                                    </scg:Dictionary>
+                                                  </sap:WorkflowViewStateService.ViewState>
+                                                </WriteLine>
+                                              </Sequence>
                                             </FlowStep>
                                           </FlowDecision.False>
                                         </FlowDecision>
@@ -485,7 +520,7 @@
                             </FlowStep>
                           </FlowDecision.True>
                           <FlowDecision.False>
-                            <FlowStep x:Name="__ReferenceID13">
+                            <FlowStep x:Name="__ReferenceID12">
                               <sap:WorkflowViewStateService.ViewState>
                                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                   <av:Point x:Key="ShapeLocation">353.5,629.5</av:Point>
@@ -522,7 +557,6 @@
             <x:Reference>__ReferenceID7</x:Reference>
             <x:Reference>__ReferenceID8</x:Reference>
             <x:Reference>__ReferenceID9</x:Reference>
-            <x:Reference>__ReferenceID10</x:Reference>
             <FlowStep x:Name="__ReferenceID16">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -531,7 +565,7 @@
                   <av:PointCollection x:Key="ConnectorLocation">230,189.5 230,239.5</av:PointCollection>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <If Condition="[IN_strRevisedPermitNumber Is Nothing]" DisplayName="If IN_strRevisedPermitNumber Is Nothing" sap:VirtualizedContainerService.HintSize="579,344" sap2010:WorkflowViewState.IdRef="If_2">
+              <If Condition="[IN_strRevisedPermitNumber Is Nothing]" DisplayName="If IN_strRevisedPermitNumber Is Nothing" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="If_2">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -551,9 +585,10 @@
                 </If.Else>
               </If>
               <FlowStep.Next>
-                <x:Reference>__ReferenceID11</x:Reference>
+                <x:Reference>__ReferenceID10</x:Reference>
               </FlowStep.Next>
             </FlowStep>
+            <x:Reference>__ReferenceID11</x:Reference>
             <x:Reference>__ReferenceID12</x:Reference>
             <x:Reference>__ReferenceID13</x:Reference>
             <x:Reference>__ReferenceID14</x:Reference>
