--- a/EA Waste Tonnage Returns/Logic Workflows/Process Case.xaml
+++ b/EA Waste Tonnage Returns/Logic Workflows/Process Case.xaml
@@ -97,7 +97,7 @@
       <Variable x:TypeArguments="x:String" Name="strRevisedPermitNumber" />
       <Variable x:TypeArguments="x:String" Name="strFullPermitNumberWithType" />
       <Variable x:TypeArguments="x:String" Name="strReturnPeriodForRename" />
-      <Variable x:TypeArguments="x:String" Name="strReturnPeriodYear" />
+      <Variable x:TypeArguments="ui:GenericValue" Name="strReturnPeriodYear" />
       <Variable x:TypeArguments="x:String" Name="strExcelFilePath" />
     </Flowchart.Variables>
     <sap:WorkflowViewStateService.ViewState>
@@ -230,17 +230,42 @@
                             </sap:WorkflowViewStateService.ViewState>
                             <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Read Excel Waste Return" sap:VirtualizedContainerService.HintSize="379,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_5" UnSafe="False" WorkflowFileName="Data Workflows\Excel\Read Excel Waste Return.xaml">
                               <ui:InvokeWorkflowFile.Arguments>
-                                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">[IN_dictConfig]</InArgument>
-                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strReturnPeriod">[strReturnPeriod]</OutArgument>
-                                <OutArgument x:TypeArguments="ui:GenericValue" x:Key="OUT_strPermitNumber">[OUT_strPermitNumber]</OutArgument>
-                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strDeclarationName">[strDeclarationName]</OutArgument>
-                                <OutArgument x:TypeArguments="ui:GenericValue" x:Key="OUT_strDeclarationDate">[strDeclarationDate]</OutArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strWorkingDirectory">[strWorkingDirectory]</InArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strAttachmentName">[strAttachmentName]</InArgument>
-                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strPermitType">[strPermitType]</OutArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strRevisedPermitNumber">[strRevisedPermitNumber]</InArgument>
-                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strFullPermitNumberWithType">[strFullPermitNumberWithType]</OutArgument>
-                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strReturnPeriodYear">[strReturnPeriodYear]</OutArgument>
+                                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">
+                                  <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="IN_dictConfig" />
+                                </InArgument>
+                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strReturnPeriod">
+                                  <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="strReturnPeriod" />
+                                </OutArgument>
+                                <OutArgument x:TypeArguments="ui:GenericValue" x:Key="OUT_strPermitNumber">
+                                  <mva:VisualBasicReference x:TypeArguments="ui:GenericValue" ExpressionText="OUT_strPermitNumber" />
+                                </OutArgument>
+                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strDeclarationName">
+                                  <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="strDeclarationName" />
+                                </OutArgument>
+                                <OutArgument x:TypeArguments="ui:GenericValue" x:Key="OUT_strDeclarationDate">
+                                  <mva:VisualBasicReference x:TypeArguments="ui:GenericValue" ExpressionText="strDeclarationDate" />
+                                </OutArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strWorkingDirectory">
+                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strWorkingDirectory" />
+                                </InArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strAttachmentName">
+                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strAttachmentName" />
+                                </InArgument>
+                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strPermitType">
+                                  <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="strPermitType" />
+                                </OutArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strRevisedPermitNumber">
+                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strRevisedPermitNumber" />
+                                </InArgument>
+                                <OutArgument x:TypeArguments="x:String" x:Key="OUT_strFullPermitNumberWithType">
+                                  <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="strFullPermitNumberWithType" />
+                                </OutArgument>
+                                <OutArgument x:TypeArguments="ui:GenericValue" x:Key="OUT_strReturnPeriodYear">
+                                  <mva:VisualBasicReference x:TypeArguments="ui:GenericValue" ExpressionText="strReturnPeriodYear" />
+                                </OutArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strEmailRecievedDate">
+                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strEmailRecievedDate" />
+                                </InArgument>
                               </ui:InvokeWorkflowFile.Arguments>
                               <sap:WorkflowViewStateService.ViewState>
                                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -522,24 +547,12 @@
                                                         <TryCatch.Try>
                                                           <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Upload to Main DB workflow" sap:VirtualizedContainerService.HintSize="370,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="Logic Workflows\ORATS\Upload to Main DB.xaml">
                                                             <ui:InvokeWorkflowFile.Arguments>
-                                                              <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">
-                                                                <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="IN_dictConfig" />
-                                                              </InArgument>
-                                                              <InArgument x:TypeArguments="ui:Window" x:Key="IN_windowImportSpreadsheet">
-                                                                <mva:VisualBasicValue x:TypeArguments="ui:Window" ExpressionText="OUT_windowImportSpreadsheet" />
-                                                              </InArgument>
-                                                              <InArgument x:TypeArguments="x:String" x:Key="IN_strDateReceived">
-                                                                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strEmailRecievedDate" />
-                                                              </InArgument>
-                                                              <OutArgument x:TypeArguments="x:String" x:Key="OUT_strFlow">
-                                                                <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="OUT_strFlow" />
-                                                              </OutArgument>
-                                                              <OutArgument x:TypeArguments="x:String" x:Key="OUT_strReasonForStoppingRobot">
-                                                                <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="OUT_strReasonForStoppingRobot" />
-                                                              </OutArgument>
-                                                              <InArgument x:TypeArguments="x:String" x:Key="IN_strExcelFilePath">
-                                                                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strWorkingDirectory + strAttachmentName" />
-                                                              </InArgument>
+                                                              <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">[IN_dictConfig]</InArgument>
+                                                              <InArgument x:TypeArguments="ui:Window" x:Key="IN_windowImportSpreadsheet">[OUT_windowImportSpreadsheet]</InArgument>
+                                                              <InArgument x:TypeArguments="x:String" x:Key="IN_strDateReceived">[strEmailRecievedDate]</InArgument>
+                                                              <OutArgument x:TypeArguments="x:String" x:Key="OUT_strFlow">[OUT_strFlow]</OutArgument>
+                                                              <OutArgument x:TypeArguments="x:String" x:Key="OUT_strReasonForStoppingRobot">[OUT_strReasonForStoppingRobot]</OutArgument>
+                                                              <InArgument x:TypeArguments="x:String" x:Key="IN_strExcelFilePath">[strWorkingDirectory + strAttachmentName]</InArgument>
                                                             </ui:InvokeWorkflowFile.Arguments>
                                                           </ui:InvokeWorkflowFile>
                                                         </TryCatch.Try>
