--- a/EA Waste Tonnage Returns/Data Workflows/ORATS/Upload Excel Return/Upload to Live Oracle.xaml
+++ b/EA Waste Tonnage Returns/Data Workflows/ORATS/Upload Excel Return/Upload to Live Oracle.xaml
@@ -5,7 +5,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>654,1240</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>652,1240</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Upload_to_Live_Oracle_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="21">
@@ -33,7 +33,7 @@
     </scg:List>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
-    <scg:List x:TypeArguments="AssemblyReference" Capacity="25">
+    <scg:List x:TypeArguments="AssemblyReference" Capacity="50">
       <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
@@ -59,6 +59,8 @@
       <AssemblyReference>UiPath.OCR.Activities.Design</AssemblyReference>
       <AssemblyReference>Microsoft.Bcl.AsyncInterfaces</AssemblyReference>
       <AssemblyReference>UiPath.UIAutomationCore</AssemblyReference>
+      <AssemblyReference>OfficeDevPnP.Core</AssemblyReference>
+      <AssemblyReference>UiPathTeam.SharePoint</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Flowchart sap2010:Annotation.AnnotationText="This workflow looks for the Upload to Live Oracle popup, if it finds it it clicks Yes, then looks for the Upload complete Popup, clicking OK on it. If either one is not found then a system exception is thrown.&#xA;&#xA;IN: dictConfig&#xA;OUT:" DisplayName="Upload_to_Live_Oracle" sap:VirtualizedContainerService.HintSize="638,1175" sap2010:WorkflowViewState.IdRef="Flowchart_1">
@@ -124,7 +126,7 @@
                   <av:PointCollection x:Key="ConnectorLocation">300,376.5 300,426.5</av:PointCollection>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <oa:Attach_to_Upload_to_Live_Popup DisplayName="Attach to Upload to Live Popup" sap:VirtualizedContainerService.HintSize="200,22" IN_intTimeout="[IN_dictConfig(&quot;timeoutMS&quot;)]" sap2010:WorkflowViewState.IdRef="Attach_to_Upload_to_Live_Popup_1" OUT_windowUploadToLive="[windowUploadToLive]">
+              <oa:Attach_to_Upload_to_Live_Popup DisplayName="Attach to Upload to Live Popup" sap:VirtualizedContainerService.HintSize="200,22" IN_intTimeout="[IN_dictConfig(&quot;timeoutS&quot;)]" sap2010:WorkflowViewState.IdRef="Attach_to_Upload_to_Live_Popup_1" OUT_windowUploadToLive="[windowUploadToLive]">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
